vbnc/vbnc/vbnc/tests/Errors/30311-20.vb
Class T
    Const M_Date As Date = 2UI
End Class